# fileflipper

./: .gitignore  README.md  fileflipper_flet_app_test.py  pyproject.toml
src/fileflipper/: __init__.py  controller.py  folder_structure.py
src/fileflipper/folder_and_file_manager/: original_archive_file_and_folder_manager.py  processed_archive_file_and_folder_manager.py
src/fileflipper/gui/: config.py  fileflipper_app.py  fileflipper_app_currently_working_copy.py  options.py  run_fileflipper.bat
