[project]
name = "fileflipper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.18.0",
    "flet[all]==0.28.3",
    "polars>=1.37.1",
]

[project.scripts]
fileflipper = "fileflipper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
